Clean up and reorganization

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "npx tailwindcss -i ./css/tailwind.css -o ./css/style.css --watch",
-    "prod": "npx tailwindcss -i ./css/tailwind.css -o ./css/style.css --minify"
+    "dev": "npx tailwindcss -i ./tailwind.css -o ./css/style.css --watch",
+    "prod": "npx tailwindcss -i ./tailwind.css -o ./css/style.css --minify"
   },
   "author": "",
   "license": "ISC",
