--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.1.1",
     "flag-icons": "^6.6.3",
-    "sortablejs": "^1.15.0",
-    "tw-elements": "^1.0.0-alpha12"
+    "sortablejs": "^1.15.0"
   }
 }
