--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "i18n Manager",
     "autoload": {
         "psr-4": {
-            "App\\": "src/"
+            "App\\": "app/"
         }
     },
     "authors": [
