--- a/.env-sample
+++ b/.env-sample
@@ -3,3 +3,8 @@ ENV=develop
 
 [app]
 URL_BASE=http://localhost:3000
+
+[paths]
+EXPORT_JSON={APP_PATH}/export/json
+EXPORT_PHP={APP_PATH}/export/php
+EXPORT_CSV={APP_PATH}/export/csv
